<resources>
    <string name="app_name">Manejo Sanitario</string>
    <string name="title_dados_animal">Dados do animal</string>
    <string name="hint_idv_ide">Idv/Ide</string>
    <string name="hint_peso_kg">Peso (kg)</string>
    <string name="hint_protocolo_vacinacao">Protocolo de vacinação</string>
    <string name="hint_protocolo_observacao">Observação</string>
    <string name="title_add_medicamento_avulso">Adicionar medicamento avulso</string>
    <string name="subtitle_fora_protocolo">Fora de um protocolo</string>
    <string name="label_medicamentos">Medicamentos</string>
    <string name="msg_empty_state_medicamentos">Selecione um protocolo ou\nadicione um medicamento avulso</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_confirmar">Confirmar</string>
    <string name="cd_add_medicamento_avulso">Adicionar medicamento avulso</string>

    <string name="checkbox_aplicado">Aplicado</string>
    <string name="checkbox_nao_aplicado">N/aplicado</string>
    <string name="cd_abrir">Abrir</string>
    <string name="cd_protocolo">Protocolo</string>
    <string name="cd_info_protocolo">Informações do protocolo</string>
    <string name="cd_remover_protocolo">Remover protocolo</string>
    <string name="cd_sem_medicamentos">Sem medicamentos</string>
    <string name="cd_remover_medicamento">Remover medicamento</string>
    <string name="cd_info_medicamento">Informações do medicamento</string>
    <string name="cd_add_medicamento">Adicionar medicamento</string>

    <string name="format_qtd_medicamentos">%1$d medicamentos</string>
    <string name="format_qtd_itens">%1$d itens</string>
    <string name="format_qtd_itens_selecionados">Selecionados (%1$d)</string>
    <string name="format_dose">%1$s mL</string>
    <string name="format_origem_e_dosagem">%1$s · %2$s</string>
    <string name="erro_carregar_protocolos">Erro ao carregar os protocolos.</string>
    <string name="erro_salvar_dados">Erro ao salvar os dados no banco</string>
    <string name="sucesso_salvar_dados">Dados salvos com sucesso</string>
    <string name="erro_carregar_items">Erro ao carregar os items.</string>
    <string name="erro_carregar_protocolo_itens">Erro ao carregar os items do protocolo.</string>
    <string name="erro_obter_informacoes_animal">Não foi possível obter as informações do animal.</string>
    <string name="erro_obter_informacoes_item">Não foi possível obter as informações do item selecionado.</string>
    <string name="protocolo_nome_vazio">s/n</string>
    <string name="erro_peso_obrigatorio">Informe o peso do animal antes de salvar.</string>
    <string name="erro_animal_obrigatorio">Nenhum animal identificado.</string>
    <string name="erro_nenhum_item">Adicione ao menos um item de aplicação antes de salvar.</string>
    <string name="erro_nenhum_item_selecionado">Selecione ao menos um item para confirmar.</string>
    <string name="erro_carregar_dosagens">Erro ao carregar dosagens dos medicamentos</string>
    <string name="text_info_medicamento_acao">Fechar</string>
    <string name="title_info_medicamento">Info. Medicamento</string>
    <string name="title_info_protocolo">Info. Protocolo</string>
    <string name="title_erro_dialog">Erro</string>
    <string name="title_aviso_dialog">Aviso</string>
    <string name="btn_dialog_confirmar">OK</string>
    <string name="erro_status_nao_definido">Marque \"Aplicado\" ou \"Não aplicado\" para todos os itens antes de salvar.</string>
    <string name="info_dose_content_description">Informações sobre a dosagem</string>
    <string name="btn_info_aplicacao_texto">Info</string>
    <plurals name="aviso_itens_ja_adicionados">
        <item quantity="one">%d item já estava na lista e foi ignorado</item>
        <item quantity="other">%d itens já estavam na lista e foram ignorados</item>
    </plurals>
    <plurals name="protocolo_itens_selecionados_count">
        <item quantity="one">%d medicamento</item>
        <item quantity="other">%d medicamentos</item>
    </plurals>
</resources>